<package>
  <name>sophus</name>
  <version>1.0.0</version>
  <description>ROS wrapper for Sophus library by Hauke Strasdat</description>
  <maintainer email="TODO@TODO.COM">TODO</maintainer>
  
  <license>MIT</license>

  <url type="website">https://github.com/strasdat/Sophus</url>
  <!-- <url type="bugtracker"></url> -->

  <author></author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

<export>
    <cpp lflags="" cflags="-I${prefix}/include/"/>
</export>

</package>
